Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101769

Qt WebEngine reports wrong UIAutomation bounding rects with high DPI

XMLWordPrintable

    • c68fa97934 (qt/qtwebengine/dev) 644d8f8eaa (qt/qtwebengine/6.4) 75a58e2ba1 (qt/qtwebengine/6.3) 75a58e2ba1 (qt/tqtc-qtwebengine/6.3) 75a58e2ba1 (qt/qtwebengine/6.3.2)

      Issue description

      See attached screenshots, taken on a machine with 125% scaling (2560x1440 resolution). UIAutomation inspection was done using Visual UI Automation Verify

      • Google Chrome reports the correct bounding rect
      • WebEngineView on Qt 6.3.0-beta2 reports the wrong bounding rect

      Issue scope

      • This issue affects both the QML WebEngineView and the widget QWebEngineView.
      • It does not seem to affect Qt Quick Controls.
      • For Qt 5.15.8, this issue manifests if scaling=200%, but not if scaling=125% or 150% (tested at 3840x2160 resolution).

       

      Example code

      import QtQuick 2.15
      import QtQuick.Window 2.15
      import QtWebEngine 1.10
      
      Window {
          width: 800
          height: 600
          visible: true
          title: "WebEngine UIAutomation"
      
          WebEngineView {
              anchors.fill: parent
              url: "https://www.google.com"
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes