Fix accessibility bounds with HighDPI scaling modes

Disable chromium's uses of zoom for device scale factors.

Fixes: QTBUG-101769
Change-Id: I9f2ae7122b59f5fbf8ffcaf8a92940792f4860c9
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit c68fa97934db12486bb12e37d1c70963ded1fd38)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>